hphp/test/zend/good/Zend/tests/bug36568.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('memory_get_usage')) die('skip PHP is configured without memory_limit');
}
