hphp/test/zend/bad/ext/mysqli/tests/mysqli_change_user_get_lock.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
die("skip - is the server still buggy?");
?>